# Pi_Quadrature

./: .bzrignore  .gitignore  JOutput.java  LICENCE  Output.groovy  PartialSum.groovy  Pi_CS_Sequential.cs  Pi_CS_ThreadsAnonymousDelegateSyncObject.cs  Pi_CS_ThreadsAnonymousDelegateSyncStatement.cs  Pi_CS_ThreadsTaskClassDelegateSyncObject.cs  Pi_CS_ThreadsTaskClassDelegateSyncStatement.cs  Pi_GroovyJava_GPars_ActorClass.groovy  Pi_Groovy_GPars_ActorClass.groovy  Pi_Groovy_GPars_ActorClass_Dynamic.groovy  Pi_Groovy_GPars_ActorClass_Static.groovy  Pi_Java_DataRush.java  Pi_Java_DataRush4.java  Pi_Java_DataRush5.java  Pi_Java_ForkJoinBasic.java  Pi_Java_ForkJoinCollection.java  Pi_Java_FunctionalJava_ParMap.java  Pi_Java_Futures.java  Pi_Java_GPars_DataFlowAndAgent.java  Pi_Java_GPars_DataflowAndAgent.java  Pi_Java_JCSP_List.java  Pi_Java_JCSP_MultiplexedChannel.java  Pi_Java_JCSP_PrimitiveArray.java  Pi_Java_ParallelArray.java  Pi_Java_Sequential.java  Pi_Java_Sequential_WarmUp.java  Pi_Java_ThreadsAccumulatorClass.java  Pi_Java_ThreadsSynchronizedStatement.java  Pi_Scala_Actors.scala  Pi_Scala_Actors_Alt.scala  Pi_Scala_Actors_SM.scala  Pi_Scala_FunctionalJava_ParMap.scala  Pi_Scala_Futures.scala  Pi_Scala_MapperFromWeb_ParMap.scala  Pi_Scala_Mapper_ParMap.scala  Pi_Scala_RemoteActors.scala  (+389 more)
Ada/: .gitignore
Algol68/: pi_sequential.a68
C/: SConstruct  meson.build  microsecondTime.c  microsecondTime.h  output.c  output.h  pi_mpi.c  pi_openmpExplicit.c  pi_openmpImplicit.c  pi_pthreadGlobalState.c  pi_pthreadParameters.c  pi_sequential.c
C#/: Output.cs  Pi_Sequential.cs  Pi_ThreadsAnonymousDelegateSyncObject.cs  Pi_ThreadsAnonymousDelegateSyncStatement.cs  Pi_ThreadsTaskClassDelegateSyncObject.cs  Pi_ThreadsTaskClassDelegateSyncStatement.cs  SConstruct
C++/: SConstruct  meson.build  output.cpp  output.hpp  pi_boostMPI.cpp  pi_boostThread.cpp  pi_cppcsp2.cpp  pi_futures.cpp  pi_futures_AW.cpp  pi_futures_async.cpp  pi_futures_thread.cpp  pi_futures_thread_AW.cpp  pi_justThread_actors.cpp  pi_justThread_futures.cpp  pi_justThread_futures_AW.cpp  pi_justThread_threadsGlobalState.cpp  pi_mpi.cpp  pi_openmpExplicit.cpp  pi_openmpImplicit.cpp  pi_parallel_futures_async.cpp  pi_parallel_futures_thread.cpp  pi_parallel_futures_thread_AW.cpp  pi_parallel_gnu_parallel_accumulate.cpp  pi_parallel_justThread_actors.cpp  pi_parallel_openmp_batched.cpp  pi_parallel_openmp_unbatched.cpp  pi_parallel_tbb_autobatched.cpp  pi_parallel_tbb_reduce_functional.cpp  pi_parallel_tbb_reduce_imperative.cpp  pi_parallel_threadsGlobalState.cpp  pi_pthreadGlobalState.cpp  pi_pthreadParameters.cpp  pi_sequential.cpp  pi_sequential_accumulate.cpp  pi_sequential_for.cpp  pi_tbbImplicit.cpp  pi_threadsGlobalState.cpp
Ceylon/: .gitignore  SConstruct  build.gradle  pi_sequential.ceylon
Chapel/: SConstruct  output.chpl  pi_coforall.chpl  pi_coforall_batched.chpl  pi_forall_batched.chpl  pi_forall_notBatched.chpl  pi_parallel_coforall_batched.chpl  pi_parallel_forall_batched.chpl  pi_parallel_forall_notBatched.chpl  pi_parallel_forall_notBatched_reduceIntent.chpl  pi_parallel_forall_reduceIntent.chpl  pi_parallel_reduce_batched.chpl  pi_parallel_reduce_notBatched.chpl  pi_reduce.chpl  pi_reduce_batched.chpl  pi_reduce_notBatched.chpl  pi_sequential_for_multiply.chpl  pi_sequential_for_power.chpl  pi_sequential_reduce.chpl  pi_sequential_reduce_batched.chpl  pi_sequential_while_multiply.chpl  pi_sequential_while_power.chpl
Clay/: SConstruct  pi_sequential.clay
Clojure/: .gitignore  SConstruct  output.clj  partialSum.clj  pi_futures.clj  pi_parallelMap.clj  pi_parallelMap_javaProcessSlice.clj  pi_sequential.clj  pi_sequential_loop.clj  pi_sequential_map_reduce.clj  project.clj
D/: SConstruct  outputFunctions.d  pi_parallelMapSequentialReduce.d  pi_parallelReduce.d  pi_parallel_batched_parallelMapSequentialReduce.d  pi_parallel_batched_sequentialMapParallelReduce.d  pi_parallel_batched_spawn.d  pi_parallel_unbatched_reduce.d  pi_parallel_unbatched_reduce_local_delegate.d  pi_parallel_unbatched_reduce_local_function.d  pi_sequential.d  pi_sequentialMapParallelReduce.d  pi_sequentialMapSequentialReduce.d  pi_sequentialReduce.d  pi_sequential_foreach.d  pi_sequential_reduce.d  pi_spawn.d  pi_threadsGlobalState_array_declarative.d  pi_threadsGlobalState_array_iterative.d  pi_threadsGlobalState_threadGroup.d
Dart/: output.dart  pi_sequential.dart
Erlang/: SConstruct  microsecondTime.erl  output.erl  pi_parallel.erl  pi_pmap.erl  pi_sequential.erl  pi_zvi.erl
Fantom/: build.fan  notes.txt  pi_futures.fan  pi_sequential_for.fan  pi_sequential_range.fan  pi_sequential_reduce.fan
Fortran/: SConstruct  notes.txt  output.f  output.f08  pi_coarray_power.f08  pi_doConcurrent_power.f08  pi_mpi_power.f  pi_mpi_power.f08  pi_openmp_power.f  pi_openmp_power.f08  pi_sequential_multiply.f  pi_sequential_multiply.f08  pi_sequential_power.f  pi_sequential_power.f08
Fortress/: SConstruct  pi.fss
Frege/: build.gradle  settings.gradle
Go/: SConstruct  pi_goroutines_multipleChannels.go  pi_goroutines_singleChannel.go  pi_sequential.go  prepare.sh
Groovy/: .gitignore  Output.groovy  PartialSum.groovy  Pi_GPars_ActorClass_Dynamic.groovy  Pi_GPars_ActorClass_Static.groovy  (+68 more)
Java/: .gitignore  (+2 more)
Rust/: .gitignore  Cargo.toml  SConscript  SConstruct  output.rs  pi_parallel_futures.rs  pi_sequential_fold.rs  pi_sequential_for.rs  pi_sequential_mapfold.rs  pi_sequential_spawn.rs  pi_sequential_while.rs
Rust/src/: output.rs  pi_parallel_eventual_futures.rs  pi_parallel_eventual_futures_batched.rs  pi_parallel_eventual_futures_batched_fold.rs  pi_parallel_eventual_futures_batched_for.rs  pi_parallel_futures.rs  pi_parallel_rayon_pariter_batched.rs  pi_parallel_rayon_pariter_notbatched.rs  pi_parallel_threads_multiple_channels_batched.rs  pi_parallel_threads_single_channel_batched.rs  pi_sequential_fold.rs  pi_sequential_for.rs  pi_sequential_mapfold.rs  pi_sequential_while.rs
(+536 files in other folders)
