[package]
name = "π by Quadrature in Rust"
version = "1.0.0"
authors = ["Russel Winder <russel@winder.org.uk>"]

[[bin]]
name = "pi_sequential_for"
path = "src/pi_sequential_for.rs"

[[bin]]
name = "pi_sequential_while"
path = "src/pi_sequential_while.rs"

[[bin]]
name = "pi_sequential_fold"
path = "src/pi_sequential_fold.rs"

[[bin]]
name = "pi_sequential_mapfold"
path = "src/pi_sequential_mapfold.rs"

[[bin]]
name = "pi_parallel_threads_single_channel_batched"
path = "src/pi_parallel_threads_single_channel_batched.rs"

[[bin]]
name = "pi_parallel_threads_multiple_channels_batched"
path = "src/pi_parallel_threads_multiple_channels_batched.rs"

[lib]
name = "output"
crate-type = ["rlib"]

[dependencies]
time = "*"
num_cpus = "*"
rayon = "*"
